test/log/mac/vsnmsacq_vv_i32_m.txt
vsnmsacq_vv_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsnmsacq_vv_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsnmsacq_vv_i32_m.c:30:6: warning: no previous prototype for 'vsnmsacq_vv_i32_m_golden' [-Wmissing-prototypes]
   30 | void vsnmsacq_vv_i32_m_golden(uint64_t *mask,int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
vsnmsacq_vv_i32_m.c: In function 'vsnmsacq_vv_i32_m_golden':
vsnmsacq_vv_i32_m.c:30:77: warning: unused parameter 'c' [-Wunused-parameter]
   30 | void vsnmsacq_vv_i32_m_golden(uint64_t *mask,int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                                    ~~~~~~~~~^
vsnmsacq_vv_i32_m.c: In function 'main':
vsnmsacq_vv_i32_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsnmsacq_vv_i32_m.c:61:14: warning: implicit declaration of function 'vsnmsacq_vv_i32_m'; did you mean 'vwsnmsacq_vv_i32_m'? [-Wimplicit-function-declaration]
   61 |     result = vsnmsacq_vv_i32_m(mask,a,b,c);
      |              ^~~~~~~~~~~~~~~~~
      |              vwsnmsacq_vv_i32_m
vsnmsacq_vv_i32_m.c:61:14: error: incompatible types when assigning to type 'int32x16_t' from type 'int'
vsnmsacq_vv_i32_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsnmsacq_vv_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsnmsacq_vv_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsnmsacq_vv_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsnmsacq_vv_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed